[gd_scene load_steps=8 format=3 uid="uid://bbjd8l1hool5u"]

[ext_resource type="Script" uid="uid://ql0mxim3hsan" path="res://scenes/ui/hud.gd" id="1_xpwvb"]
[ext_resource type="Texture2D" uid="uid://dm30iu3xil105" path="res://images/ui/button_square_gradient.png" id="2_hqnrr"]
[ext_resource type="Texture2D" uid="uid://qbycopj8sitg" path="res://images/player/bunny-normal.png" id="5_gss2c"]
[ext_resource type="PackedScene" uid="uid://bwi4upr0emqso" path="res://scenes/ui/health_display.tscn" id="6_h022r"]
[ext_resource type="Texture2D" uid="uid://c62hdn7aevui5" path="res://images/ui/coin.png" id="6_kicr4"]
[ext_resource type="Texture2D" uid="uid://db6y45q0b7kde" path="res://images/player/seal-normal.png" id="7_4jqwt"]
[ext_resource type="Theme" uid="uid://domdts7824yny" path="res://styles/theme_default.tres" id="7_mj13f"]

[node name="HUD" type="Control"]
z_index = 100
z_as_relative = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xpwvb")

[node name="TextureRect" type="NinePatchRect" parent="."]
self_modulate = Color(0.15, 0.15, 0.15, 1)
layout_mode = 1
offset_right = 592.0
offset_bottom = 41.0
texture = ExtResource("2_hqnrr")
patch_margin_left = 8
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(452, 20)
texture = ExtResource("6_kicr4")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 464.0
offset_right = 580.0
offset_bottom = 39.0
theme = ExtResource("7_mj13f")
text = "000000"
vertical_alignment = 1

[node name="P1Health" type="Node2D" parent="."]
position = Vector2(9, 7)

[node name="P1Char" type="Sprite2D" parent="P1Health"]
position = Vector2(13, 10)
texture = ExtResource("5_gss2c")
hframes = 9
vframes = 18

[node name="P1HealthDisplay" parent="P1Health" instance=ExtResource("6_h022r")]
position = Vector2(32, 5)

[node name="P2Health" type="Node2D" parent="."]
position = Vector2(160, 7)

[node name="P2Char" type="Sprite2D" parent="P2Health"]
position = Vector2(13, 10)
texture = ExtResource("7_4jqwt")
hframes = 9
vframes = 18

[node name="P2HealthDisplay" parent="P2Health" instance=ExtResource("6_h022r")]
position = Vector2(32, 5)
is_p1 = false
